fix: text-align and font-family

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Verdana, sans-serif;
+    font-family: Arial, Verdana;
     background-color: #000000;
     color: #FFFFFF;
     margin: 20px 20px 0 20px;
@@ -42,7 +42,7 @@ div {
 
 .red {
     background-color: #FF0000;
-    text-align: end;
+    text-align: right;
     margin-left: 50px;
     border-bottom: 2px solid;
     border-left: 5px solid;
@@ -66,7 +66,7 @@ div {
 
 .yellow {
     background-color: #FFFF00;
-    text-align: end;
+    text-align: right;
     margin-left: 50px;
     border-bottom: 2px solid;
     border-left: 5px solid;
@@ -95,6 +95,6 @@ footer {
 
 footer p {
     font-size: 20px;
-    text-align: end;
+    text-align: right;
     padding: 15px 15px 15px 0;
 }
